# cv-asl

./: .gitignore  ASL_PROJECT_DOCUMENTATION.md  ASL_TRAINING_GUIDE.md  BACKGROUND_REMOVAL_IMPROVEMENTS.md  CAPTURE_FEATURE_GUIDE.md  DEVELOPMENT_SUMMARY.md  HAND_DETECTION_IMPROVEMENTS.md  MODEL_PERFORMANCE_GUIDE.md  MOG2_ROI_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  collect_live_training_data.py  requirements.txt  run_live_asl.py  run_tests.py  setup.cfg  setup.py
documentation/: ADVANCED_VISION_SYSTEM.md  HAND_DETECTION_IMPROVEMENTS.md  LIVE_ASL_GUIDE.md  OPTIMIZATION_SUMMARY.md  SIMPLE_HAND_DETECTION.md
scripts/: setup_asl_training.py
src/as_cam/vision/: tracker.py
src/asl_cam/: capture.py  collect.py  infer.py  live_asl.py  preprocess.py  train.py
src/asl_cam/tests/: test_collect_bg_removal.py  test_enhanced_hand_detector.py  test_preprocess.py  test_skin.py  test_tracker.py
src/asl_cam/utils/: fps.py  hand_detection.py
src/asl_cam/vision/: __init__.py  asl_hand_detector.py  background_removal.py  enhanced_hand_detector.py  simple_hand_detector.py  skin.py  tracker.py
src/asl_dl/: __init__.py  infer.py
src/asl_dl/data/: __init__.py  dataset.py  dataset_setup.py  kaggle_downloader.py
src/asl_dl/docs/: ASL_TRAINING_GUIDE.md
src/asl_dl/monitoring/: __init__.py
src/asl_dl/scripts/: __init__.py  comprehensive_evaluation.py  (+2 more)
src/tests/: test_capture.py
tests/: README.md  __init__.py  test_preprocess.py  test_skin.py  test_tracker.py
tests/integration/: __init__.py
tests/system/: __init__.py
tests/unit/: __init__.py
(+28 files in other folders)
