[metadata]
name = asl-cam
version = 0.1.0
description = Real-time American Sign Language recognition using computer vision
author = Raul Adell
author_email = your.email@example.com
url = https://github.com/RaulAdSe/cv-asl

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python
    torch
    torchvision
    torchaudio
    pandas
    pyyaml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    asl-cam = asl_cam.capture:main

[tool:pytest]
testpaths = src/tests
python_files = test_*.py
python_classes = Test
python_functions = test_*

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[mypy.plugins.numpy.*]
ignore_missing_imports = True

[ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
